--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint . --ext .ts,.vue"
   },
   "devDependencies": {
-    "nuxt": "3.0.0"
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nuxt": "3.0.0",
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
   }
 }
