--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .ts,.vue"
   },
   "devDependencies": {
+    "@mdi/font": "^7.1.96",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
@@ -16,6 +17,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "3.0.0",
     "prettier": "^2.8.1",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "vuetify": "3.1.0"
   }
 }
