--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.6",
+    "pinia": "^2.0.28",
     "vuetify": "3.1.0"
   }
 }
