--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
+    "@vee-validate/i18n": "^4.7.3",
+    "@vee-validate/rules": "^4.7.3",
     "pinia": "^2.0.28",
+    "vee-validate": "^4.7.3",
     "vuetify": "3.1.0"
   }
 }
