--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
 
   "rules": {
     "vue/multi-word-component-names": 0,
-    "vue/v-on-event-hyphenation": ["off"],
+    "vue/v-on-event-hyphenation": ["never"],
     // "vue/no-multiple-template-root": 0,
     "prettier/prettier": ["error", { "singleQuote": true, "semi": false }]
   }
