--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,9 @@
 
   "rules": {
     "vue/multi-word-component-names": 0,
-    "vue/v-on-event-hyphenation": ["never"],
+    "vue/v-on-event-hyphenation": 0,
+    "vue/no-mutating-props": 0,
+    "vue/require-default-prop": 0,
     // "vue/no-multiple-template-root": 0,
     "prettier/prettier": ["error", { "singleQuote": true, "semi": false }]
   }
